update satu sehat : change env() to config()

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SS_ORGANIZATION_ID_SANDBOX=
+SS_CLIENT_ID_SANDBOX=
+SS_CLIENT_SECRET_SANDBOX=
+SS_AUTH_URL_SANDBOX=
+SS_BASE_URL_SANDBOX=
